z-index fixes on navigation

--- a/src/app/components/navigation/animated-x/animatedX.module.css
+++ b/src/app/components/navigation/animated-x/animatedX.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--bar-gap);
-  z-index: 2;
+  z-index: 4;
   cursor: pointer;
 
   position: absolute;
